fixed some layout issues with padding and margins

--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,21 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  height: 100vh;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 header {
-  margin-top: -20px;
   width: 60vw;
   border-bottom: 1px solid gray;
+  padding-top: 10px;
+}
+
+section {
+  height: auto;
+  padding: 10px;
 }
 
 #home-pic {
