--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 :root {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -25,11 +28,12 @@ a:hover {
 
 body {
   margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
-  place-items: center;
+  align-items: center;
+  justify-content: space-between;
   min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
